--- a/src/components/CardItem/CardItem.module.css
+++ b/src/components/CardItem/CardItem.module.css
@@ -1,3 +1,117 @@
 .card {
-  border: 1px solid black;
+  box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+  gap: 20px;
+  border-radius: 1%;
+  display: flex;
+  flex-direction: column;
+}
+
+.cart-item {
+  flex-direction: row;
+}
+
+.cart-item .middle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.cart-item-controls {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin-right: 20px;
+  margin-left: auto;
+}
+
+.cart-item-controls > div {
+  display: flex;
+  gap: 5px;
+}
+
+.card > img {
+  max-height: 300px;
+  min-height: 300px;
+  border-top-left-radius: 0.3rem;
+  border-top-right-radius: 0.3rem;
+  background-color: white;
+  padding: 10px;
+  object-fit: contain;
+}
+
+.price {
+  font-size: 1.4rem;
+}
+
+.category {
+  margin-top: 20px;
+}
+
+.shop-page-controls {
+  display: flex;
+  gap: 20px;
+  flex-direction: column;
+  margin-top: auto;
+  padding: 20px;
+}
+
+.middle {
+  padding: 20px;
+}
+
+.controls-wrapper {
+  gap: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.controls-wrapper > div {
+  display: flex;
+  justify-content: space-between;
+}
+
+.controls-wrapper > div > input {
+  max-width: 100px;
+}
+
+.controls-wrapper input,
+.controls-wrapper button,
+.shop-page-controls > button,
+.cart-item-controls > div > button,
+.cart-item-controls > button {
+  cursor: pointer;
+  border: none;
+  border-radius: 0.3rem;
+}
+
+.cart-item-controls > button {
+  padding: 14px;
+}
+
+.controls-wrapper > div > div {
+  display: flex;
+  gap: 10px;
+}
+
+.cart-item img {
+  max-width: 400px;
+  min-width: 400px;
+}
+
+@media screen and (max-width: 1024px) {
+  .cart-item {
+    flex-direction: column;
+  }
+
+  .cart-item-controls {
+    margin-right: 0;
+    margin-bottom: 20px;
+    margin-left: 0;
+  }
+
+  .cart-item img {
+    max-width: none;
+    min-width: 0;
+  }
 }
