--- a/src/pages/Shop/Shop.module.css
+++ b/src/pages/Shop/Shop.module.css
@@ -1,4 +1,10 @@
 .shop-wrapper {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(275px, 1fr));
+  margin-inline: 20px;
+  gap: 20px;
+}
+
+.text-center {
+  text-align: center;
 }
